# BIT-Capital-Challenge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
backend/: .env.example  Dockerfile  README.md  config.py  db.py  main.py  requirements.txt  run_pipeline.py
backend/scripts/: assign_event_stocks.py  filter_pipeline.py  sync_markets.py
backend/services/: enrich.py  events.py  filter.py  ingest.py  mapping.py  matching.py  report.py  reports.py  stocks.py
scripts/: assign_event_stocks.py  filter_pipeline.py  resume_stock_matching.py  sync_markets.py
supabase/migrations/: 001_create_tables.sql  002_add_events_table.sql  003_event_filtering.sql  004_stocks_portfolios.sql  005_rls_read_policies.sql  006_stocks_impact_types.sql  007_event_stock_mappings_affects.sql  008_reports.sql  009_reports_event_ids.sql  010_reports_report_type.sql  011_reports_report_type_sector.sql  012_reports_report_type_combined.sql  013_reports_progress.sql  014_events_first_seen_at.sql  full_schema.sql
web/: .env.example  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx
web/src/app/api/stocks/[id]/enrich/: route.ts
web/src/app/api/stocks/enrich/: route.ts
web/src/app/events/: page.tsx
web/src/app/reports/: page.tsx
web/src/app/stocks/: page.tsx
web/src/components/: event-filters.tsx  pagination.tsx  tab-nav.tsx
web/src/lib/: backend-api.ts  event-stock-mapping.ts  supabase-server.ts  supabase.ts
